<resources>
    <string name="app_name" translatable="false">ERuino</string>
    <string name="edit_message" translatable="false">Enter your message</string>
    <string name="button_send" translatable="false">Send!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signed_out">SIGNED OUT</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arduino Project</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>

    <string name="travel_mode">Travel Mode</string>
    <string name="vents_mode">Vents Mode</string>
    <string name="window_mode">Windows</string>
    <string name="informations_button">Info</string>
    <string name="tips_button">Tips</string>
    <string name="police_button">Call Police</string>
    <string name="sensors_button">Sensors</string>
    <string name="sensors">Sensors</string>

</resources>
